# app_tpi_ugd

./: README.md
App/: app.c
app-tpi-ugd/: CMakeLists.txt
app-tpi-ugd/src/: accounts.c  accounts.h  cargarSaldo.c  cargarSaldo.h  cuenta.c  cuenta.h  inputs.c  inputs.h  main.c  movimientos.c  movimientos.h  test.c  transportes.c  transportes.h  user.c  user.h  utilidades.c  utilidades.h  validaciones.c  validaciones.h  validateData.c  validateData.h
